reports/page4.log
Traceback (most recent call last):
  File "/home/jebarrios/anaconda3/envs/kwant/lib/python3.6/site-packages/jupyter_cache/executors/utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "/home/jebarrios/anaconda3/envs/kwant/lib/python3.6/site-packages/nbclient/client.py", line 1093, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/jebarrios/anaconda3/envs/kwant/lib/python3.6/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/jebarrios/anaconda3/envs/kwant/lib/python3.6/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/home/jebarrios/anaconda3/envs/kwant/lib/python3.6/asyncio/base_events.py", line 488, in run_until_complete
    return future.result()
  File "/home/jebarrios/anaconda3/envs/kwant/lib/python3.6/site-packages/nbclient/client.py", line 560, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "/home/jebarrios/anaconda3/envs/kwant/lib/python3.6/site-packages/nbclient/client.py", line 854, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/home/jebarrios/anaconda3/envs/kwant/lib/python3.6/site-packages/nbclient/client.py", line 756, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------

k=[[0,0.0],[0.0,0.25],[0,.5]]                                
k_label1=[r"$-Z$",r"$\Gamma$",r"$Z$"hide-input]
(k_vec,k_dist,k_node)=NX_WSM.k_path(k,101, report=False)
EkfinX=NX_WSM.solve_all(k_vec)
k=[[0,0.0],[0.25,0],[.5,0]]  
k_label2=[r"$-X$",r"$\Gamma$",r"$X$"]
(k_vec,k_dist,k_node)=NY_WSM.k_path(k,101, report=False)
EkfinY=NY_WSM.solve_all(k_vec)
k_label3=[r"$-Y$",r"$\Gamma$",r"$Y$"]
(k_vec,k_dist,k_node)=NY_WSM.k_path(k,101, report=False)
EkfinZ=NZ_WSM.solve_all(k_vec)

------------------

[0;36m  File [0;32m"<ipython-input-5-4c1724f9c180>"[0;36m, line [0;32m2[0m
[0;31m    k_label1=[r"$-Z$",r"$\Gamma$",r"$Z$"hide-input][0m
[0m                                           ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-5-4c1724f9c180>, line 2)

